tests/neg-custom-args/captures/sep-leak-problem.check
-- Error: tests/neg-custom-args/captures/sep-leak-problem.scala:13:14 --------------------------------------------------
13 |  val t1 = t0.get // error
   |           ^^^^^^
   |           Local any in the type of parameter x leaks into capture scope of method useBoxedAsync.
   |           You could try to abstract the capability in a capset variable.
-- Error: tests/neg-custom-args/captures/sep-leak-problem.scala:16:45 --------------------------------------------------
16 |def useBoxedAsync1(x: Box[Async^]): Unit = x.get.read() // error
   |                                           ^^^^^
   |                         Local any in the type of parameter x leaks into capture scope of method useBoxedAsync1.
   |                         You could try to abstract the capability in a capset variable.
-- Error: tests/neg-custom-args/captures/sep-leak-problem.scala:31:15 --------------------------------------------------
31 |    val t1 = x.get // error
   |             ^^^^^
   |             Local any in the type of parameter x leaks into capture scope of an enclosing function.
   |             You could try to abstract the capability in a capset variable.
-- Error: tests/neg-custom-args/captures/sep-leak-problem.scala:37:52 --------------------------------------------------
37 |  val f: Box[Async^] => Unit = (x:  Box[Async^]) => useBoxedAsync(x) // error
   |                                                    ^^^^^^^^^^^^^
   |                         Local any in the type of parameter x leaks into capture scope of an enclosing function.
   |                         You could try to abstract the capability in a capset variable.
